--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "bootstrap": "^5.3.2",
+    "mui-phone-number": "^3.0.3",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
